:art: - fix: explicit contrast colour

--- a/src/components/global-search/global-search.scss
+++ b/src/components/global-search/global-search.scss
@@ -6,7 +6,7 @@
     background: var(--global-search-background);
     border-radius: var(--sizes-border-radius-s);
     box-shadow: 0 4px 11px 0 var(--global-search-shadow);
-    color: var(--typography-color-body);
+    color: var(--global-search-contrast);
     max-width: 600px;
     text-align: start;
     width: 100%;
